--- a/SiteWebQuidditch/SiteQuidditch.Master
+++ b/SiteWebQuidditch/SiteQuidditch.Master
@@ -1,11 +1,13 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="SiteQuidditch.master.cs" Inherits="SiteWebQuidditch.SiteQuidditch" %>
-<link type="text/css" rel="stylesheet" href="Styles/master.css" />
+
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
+    <link type="text/css" rel="stylesheet" href="Styles/master.css" />
+    <script src="Javascripts/jquery-1.11.0.js" type="text/javascript"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
