Fin séance du 07/03/14

--- a/SiteWebQuidditch/SiteQuidditch.Master
+++ b/SiteWebQuidditch/SiteQuidditch.Master
@@ -12,7 +12,7 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form id="form1" runat="server">
+    <form id="form1" runat="server" method="post">
     <div>
         <table>
             <tr>
